<resources>
    <string name="app_name">HIIT Your Goal</string>
    <string name="USERNAME">USERNAME</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="Time_Goal">Time Goal</string>
    <string name="HR_Upper_Limit">Heart Rate Upper Limit</string>
    <string name="HR_Lower_Limit">Heart Rate Lower Limit</string>
    <string name="Type">Type of HIIT Session</string>
    <string name="start">Start Workout!</string>
    <string name="register">Register</string>
    <string name="continue_guest">Continue as Guest</string>
    <string name="lets_go">"Let's Go!"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>